Use `commons-lang3-api` jenkins plugin

--- a/blueocean-commons/pom.xml
+++ b/blueocean-commons/pom.xml
@@ -20,8 +20,8 @@
       <artifactId>jackson2-api</artifactId>
     </dependency>
       <dependency>
-          <groupId>org.apache.commons</groupId>
-          <artifactId>commons-lang3</artifactId>
+          <groupId>io.jenkins.plugins</groupId>
+          <artifactId>commons-lang3-api</artifactId>
       </dependency>
   </dependencies>
 
