--- a/pom.xml
+++ b/pom.xml
@@ -486,17 +486,12 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>github-api</artifactId>
-            <version>1.114.2</version>
+            <version>1.303-417.ve35d9dd78549</version>
         </dependency>
         <dependency>
             <groupId>io.jenkins.plugins</groupId>
             <artifactId>okhttp-api</artifactId>
-            <version>3.12.12.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.12.12</version>
+            <version>4.9.3-108.v0feda04578cf</version>
         </dependency>
         <dependency>
             <groupId>io.jenkins.plugins</groupId>
