--- a/pom.xml
+++ b/pom.xml
@@ -406,6 +406,13 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>github-branch-source</artifactId>
             <version>2.6.0</version>
+            <exclusions>
+                <!-- commons-lang3 is provided by commons-lang3-api plugin -->
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -503,7 +510,7 @@
         <dependency>
             <groupId>io.jenkins.plugins</groupId>
             <artifactId>okhttp-api</artifactId>
-            <version>4.9.3-108.v0feda04578cf</version>
+            <version>3.12.12</version>
         </dependency>
         <dependency>
             <groupId>io.jenkins.plugins</groupId>
