--- a/blueocean-events/pom.xml
+++ b/blueocean-events/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>blueocean-pipeline-api-impl</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.jenkins.plugins</groupId>
+            <artifactId>caffeine-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>async-http-client</artifactId>
             <scope>test</scope>
