More dependency management fixes, for example https://github.com/jenkinsci/okhttp-api-plugin/pull/55 & https://github.com/jenkinsci/bom/pull/1676

--- a/blueocean-git-pipeline/pom.xml
+++ b/blueocean-git-pipeline/pom.xml
@@ -36,7 +36,8 @@
     <dependency>
       <groupId>org.eclipse.jgit</groupId>
       <artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
-      <version>6.4.0.202211300538-r</version>
+      <!-- TODO this is hard to manage; if needed, should be in BOM -->
+      <version>6.5.0.202303070854-r</version>
     </dependency>
 
     <!-- test dependencies -->
