--- a/acceptance-tests/runner/runtime/pom.xml
+++ b/acceptance-tests/runner/runtime/pom.xml
@@ -44,8 +44,8 @@
       <dependencies>
           <dependency>
               <groupId>org.hamcrest</groupId>
-              <artifactId>hamcrest-core</artifactId>
-              <version>1.3</version>
+              <artifactId>hamcrest</artifactId>
+              <version>2.2</version>
           </dependency>
           <dependency>
               <groupId>commons-logging</groupId>
