use uap new maven coordinates
Signed-off-by: Olivier Lamy <olamy@apache.org>

--- a/blueocean-rest-impl/pom.xml
+++ b/blueocean-rest-impl/pom.xml
@@ -91,7 +91,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.ua-parser</groupId>
+            <groupId>io.github.olamy.ua-parser</groupId>
             <artifactId>uap-java</artifactId>
             <exclusions>
               <exclusion> <!-- from io.jenkins.plugins:snakeyaml-api -->
