--- a/pom.xml
+++ b/pom.xml
@@ -239,7 +239,8 @@
         <dependency>
             <groupId>io.jenkins.plugins</groupId>
             <artifactId>snakeyaml-api</artifactId>
-            <version>2.0-100.v5c28c7cb_1e67</version>
+            <version>1.33-95.va_b_a_e3e47b_fa_4</version>
+            <!--version>2.0-100.v5c28c7cb_1e67</version-->
         </dependency>
 
         <dependency>
