--- a/pom.xml
+++ b/pom.xml
@@ -240,7 +240,8 @@
         <dependency>
             <groupId>io.jenkins.plugins</groupId>
             <artifactId>snakeyaml-api</artifactId>
-            <version>2.0-100.v5c28c7cb_1e67</version>
+            <version>1.33-95.va_b_a_e3e47b_fa_4</version>
+            <!--version>2.0-100.v5c28c7cb_1e67</version-->
         </dependency>
 
         <dependency>
@@ -518,7 +519,7 @@
         <dependency>
             <groupId>io.github.olamy.ua-parser</groupId>
             <artifactId>uap-java</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>1.6.0</version>
             <exclusions>
               <!-- commons-collections comes from jenkins core -->
               <exclusion>
