--- a/blueocean-commons/pom.xml
+++ b/blueocean-commons/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.jenkins.blueocean</groupId>
     <artifactId>blueocean-parent</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>1.27.4.1</version>
   </parent>
 
   <artifactId>blueocean-commons</artifactId>
