--- a/blueocean-executor-info/pom.xml
+++ b/blueocean-executor-info/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.jenkins.blueocean</groupId>
         <artifactId>blueocean-parent</artifactId>
-        <version>${revision}${changelist}</version>
+        <version>1.27.6</version>
     </parent>
     <name>DEPRECATED Blue Ocean Executor Info</name>
     <artifactId>blueocean-executor-info</artifactId>
