--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -287,5 +287,21 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>ci</id>
+            <build>
+            <pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludedGroups>flaky</excludedGroups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </pluginManagement>
+            </build>
+        </profile>
     </profiles>
 </project>
