--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -290,17 +290,18 @@
         <profile>
             <id>ci</id>
             <build>
-            <pluginManagement>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <excludedGroups>flaky</excludedGroups>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </pluginManagement>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <excludedGroups>flaky</excludedGroups>
+                                <rerunFailingTestsCount>3</rerunFailingTestsCount>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
     </profiles>
