this re run here is a bad idea :)
Signed-off-by: Olivier Lamy <olamy@apache.org>

--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -297,7 +297,7 @@
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
                                 <excludedGroups>flaky</excludedGroups>
-                                <rerunFailingTestsCount>2</rerunFailingTestsCount>
+<!--                                <rerunFailingTestsCount>2</rerunFailingTestsCount>-->
                             </configuration>
                         </plugin>
                     </plugins>
