--- a/acceptance-tests/runner/runtime/pom.xml
+++ b/acceptance-tests/runner/runtime/pom.xml
@@ -25,6 +25,7 @@
     <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
     <java.level>8</java.level>
     <slf4j.version>1.7.30</slf4j.version>
+    <webDriverDefaultTimeout>120000</webDriverDefaultTimeout>
   </properties>
 
   <repositories>
@@ -240,6 +241,27 @@
             </configuration>
           </plugin>
         </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>ci</id>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <excludedGroups>flaky</excludedGroups>
+                <systemPropertyVariables>
+                <ath.defaultRetry>4</ath.defaultRetry>
+                <webDriverDefaultTimeout>${webDriverDefaultTimeout}</webDriverDefaultTimeout>
+                </systemPropertyVariables>
+                <!--                                <rerunFailingTestsCount>2</rerunFailingTestsCount>-->
+                </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
       </build>
     </profile>
   </profiles>
