--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -14,6 +14,7 @@
         <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
         <slf4j.version>1.7.32</slf4j.version>
         <selenium.version>3.141.59</selenium.version> <!-- 3.141.59 4.0.0-alpha-6 -->
+        <webDriverDefaultTimeout>180000</webDriverDefaultTimeout>
     </properties>
 
 
@@ -285,6 +286,27 @@
                         </configuration>
                     </plugin>
                 </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>ci</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <excludedGroups>flaky</excludedGroups>
+                                <systemPropertyVariables>
+                                    <ath.defaultRetry>4</ath.defaultRetry>
+                                    <webDriverDefaultTimeout>240000</webDriverDefaultTimeout>
+                                </systemPropertyVariables>
+<!--                                <rerunFailingTestsCount>2</rerunFailingTestsCount>-->
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
     </profiles>
