--- a/acceptance-tests/runner/runtime/pom.xml
+++ b/acceptance-tests/runner/runtime/pom.xml
@@ -253,12 +253,7 @@
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
                 <excludedGroups>flaky</excludedGroups>
-                <systemPropertyVariables>
-                <ath.defaultRetry>4</ath.defaultRetry>
-                <webDriverDefaultTimeout>${webDriverDefaultTimeout}</webDriverDefaultTimeout>
-                </systemPropertyVariables>
-                <!--                                <rerunFailingTestsCount>2</rerunFailingTestsCount>-->
-                </configuration>
+              </configuration>
             </plugin>
           </plugins>
         </pluginManagement>
@@ -267,6 +262,21 @@
   </profiles>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+            <systemPropertyVariables>
+              <ath.defaultRetry>4</ath.defaultRetry>
+              <webDriverDefaultTimeout>${webDriverDefaultTimeout}</webDriverDefaultTimeout>
+            </systemPropertyVariables>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
           <groupId>com.github.klieber</groupId>
