Explicitly use Atlassian repository

--- a/blueocean-jira/pom.xml
+++ b/blueocean-jira/pom.xml
@@ -48,4 +48,16 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>atlassian-maven-public</id>
+            <url>https://packages.atlassian.com/maven-public/</url>
+        </repository>
+    </repositories>
 </project>
