--- a/blueocean-pipeline-editor/pom.xml
+++ b/blueocean-pipeline-editor/pom.xml
@@ -61,6 +61,7 @@
         <dependency>
             <groupId>org.jenkinsci.plugins</groupId>
             <artifactId>pipeline-model-definition</artifactId>
+            <version>2.2197.vb_d144259a_8a_9</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
