--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
     <byte-buddy.version>1.14.9</byte-buddy.version>
     <node.version>10.13.0</node.version>
     <npm.version>6.14.4</npm.version>
+    <!-- TODO: Remove this and related dependencyManagement entries once it is included in the BOM. -->
+    <pipeline-model-definition.version>2.2197.vb_d144259a_8a_9</pipeline-model-definition.version>
     <jacoco.haltOnFailure>false</jacoco.haltOnFailure>
     <jacoco.line.coverage>0.70</jacoco.line.coverage>
     <jacoco.missedclass.coverage>0.00</jacoco.missedclass.coverage>
@@ -524,6 +526,28 @@
             <groupId>com.google.errorprone</groupId>
             <artifactId>error_prone_annotations</artifactId>
             <version>2.5.1</version>
+        </dependency>
+
+        <!-- TODO: Remove these and associated property once included in BOM -->
+        <dependency>
+            <groupId>org.jenkinsci.plugins</groupId>
+            <artifactId>pipeline-model-api</artifactId>
+            <version>${pipeline-model-definition.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkinsci.plugins</groupId>
+            <artifactId>pipeline-model-definition</artifactId>
+            <version>${pipeline-model-definition.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkinsci.plugins</groupId>
+            <artifactId>pipeline-model-extensions</artifactId>
+            <version>${pipeline-model-definition.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkinsci.plugins</groupId>
+            <artifactId>pipeline-stage-tags-metadata</artifactId>
+            <version>${pipeline-model-definition.version}</version>
         </dependency>
     </dependencies>
   </dependencyManagement>
