--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -46,8 +46,8 @@
   },
   "dependencies": {
     "@jenkins-cd/blueocean-material-icons": "0.0.8",
-    "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/js-extensions": "0.0.44",
+    "@jenkins-cd/js-modules": "0.0.10",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
     "moment": "2.19.3",
@@ -60,16 +60,15 @@
   "devDependencies": {
     "@jenkins-cd/js-builder": "0.0.64",
     "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@kadira/storybook": "2.35.3",
     "@types/node": "11.9.5",
     "@types/react": "16.4.14",
     "@types/react-dom": "16.0.7",
     "babel-eslint": "7.0.0",
-    "babel-polyfill": "6.16.0",
-    "babel-preset-es2015": "6.16.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
-    "bluebird": "3.4.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "bluebird": "^3.7.2",
     "browserify": "16.2.3",
     "chai": "3.5.0",
     "cli-spinner": "0.2.6",
@@ -77,29 +76,28 @@
     "eslint": "2.13.1",
     "eslint-plugin-react": "4.3.0",
     "flow-bin": "0.33.0",
-    "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
-    "gulp-clean": "0.3.2",
-    "gulp-concat": "2.6.0",
-    "gulp-copy": "0.0.2",
-    "gulp-eslint": "3.0.1",
-    "gulp-less": "3.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sourcemaps": "2.1.1",
-    "gulp-svgmin": "1.2.3",
-    "gulp-typescript": "4.0.1",
+    "gulp": "^5.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-copy": "^4.0.1",
+    "gulp-eslint": "^6.0.0",
+    "gulp-less": "^5.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-typescript": "^5.0.1",
     "harp": "0.46.1",
-    "jest": "19.0.2",
+    "jest": "^29.7.0",
     "less": "2.7.2",
     "mockdate": "2.0.2",
-    "node-sass": "7.0.0",
     "normalize.css": "5.0.0",
     "octicons": "4.4.0",
-    "react-addons-test-utils": "15.4.2",
+    "react-addons-test-utils": "^15.6.2",
     "run-sequence": "1.2.2",
-    "ts-jest": "19.0.2",
+    "ts-jest": "^29.1.2",
     "tsify": "4.0.0",
-    "typescript": "3.3.3333",
+    "typescript": "^5.4.5",
     "watchify": "3.11.1"
   },
   "jenkinscd": {
