--- a/jenkins-design-language/src/js/stories/.eslintrc
+++ b/jenkins-design-language/src/js/stories/.eslintrc
@@ -1,16 +1,18 @@
 {
-    "ecmaFeatures": {
-        "jsx": true,
-        "modules": true
-    },
     "env": {
         "browser": true,
         "es6": true,
         "node": true
     },
-    "parser": "babel-eslint",
     "rules": {
         "no-console": 0
+    },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true,
+            "modules": true
+        },
+        "sourceType": "module"
     },
     "plugins": [
         "react"
