--- a/jenkins-design-language/.babelrc
+++ b/jenkins-design-language/.babelrc
@@ -1,3 +1,4 @@
 {
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": ["@babel/preset-react", "@babel/preset-flow"],
+    "plugins": ["babel-plugin-syntax-hermes-parser"]
 }
