--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@jenkins-cd/blueocean-material-icons": "0.0.8",
+    "@jenkins-cd/js-builder": "^0.0.64",
     "@jenkins-cd/js-extensions": "0.0.44",
     "@jenkins-cd/js-modules": "0.0.10",
     "linkifyjs": "2.1.4",
@@ -58,25 +59,25 @@
     "react-router": "2.8.1"
   },
   "devDependencies": {
-    "@jenkins-cd/js-builder": "0.0.64",
+    "@babel/core": "^7.24.4",
+    "@babel/eslint-parser": "^7.24.1",
+    "@babel/preset-flow": "^7.24.1",
+    "@babel/preset-react": "^7.24.1",
     "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@types/node": "11.9.5",
+    "@types/node": "^20.12.1",
     "@types/react": "16.4.14",
     "@types/react-dom": "16.0.7",
-    "babel-eslint": "7.0.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-plugin-syntax-hermes-parser": "^0.20.1",
     "bluebird": "^3.7.2",
     "browserify": "16.2.3",
     "chai": "3.5.0",
     "cli-spinner": "0.2.6",
     "enzyme": "2.5.1",
-    "eslint": "2.13.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-ft-flow": "^3.0.7",
     "eslint-plugin-react": "4.3.0",
     "flow-bin": "0.33.0",
-    "gulp": "^5.0.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
@@ -86,8 +87,9 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svgmin": "^4.1.0",
-    "gulp-typescript": "^5.0.1",
+    "gulp-typescript": "^4.0.1",
     "harp": "0.46.1",
+    "hermes-eslint": "^0.20.1",
     "jest": "^29.7.0",
     "less": "2.7.2",
     "mockdate": "2.0.2",
@@ -141,5 +143,8 @@
         "tsify"
       ]
     ]
+  },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
   }
 }
