--- a/blueocean-personalization/.editorconfig
+++ b/blueocean-personalization/.editorconfig
@@ -8,3 +8,6 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 160
+
+[package.json]
+indent_size = 2
