--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -31,13 +31,13 @@
     "eslint-plugin-react": "4.3.0",
     "giti": "1.1.3",
     "gulp": "3.9.1",
-    "gulp-typescript": "4.0.1",
-    "jest": "29.6.1",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "jest": "^23.6.0",
     "ncp": "2.0.0",
     "reactify": "1.1.1",
-    "ts-jest": "29.1.1",
+    "ts-jest": "^23.10.5",
     "tsify": "4.0.0",
-    "typescript": "2.7.2"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@jenkins-cd/blueocean-core-js": "1.10.4",
@@ -100,5 +100,8 @@
         "tsify"
       ]
     ]
+  },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
   }
 }
