--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -113,6 +113,11 @@
       "jsx",
       "json",
       "node"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.[jt]s?(x)",
+      "**/?(*.)+(spec|test).[jt]s?(x)",
+      "**/*-(spec).[jt]s?(x)"
     ]
   },
   "browserify": {
