Test with git-client using Apache Mina, adapt hackhish code
Signed-off-by: Olivier Lamy <olamy@apache.org>

--- a/blueocean-git-pipeline/pom.xml
+++ b/blueocean-git-pipeline/pom.xml
@@ -18,6 +18,7 @@
     <jacoco.haltOnFailure>true</jacoco.haltOnFailure>
   </properties>
 
+
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -31,13 +32,18 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>git</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>git-client</artifactId>
+      <version>4.8.0-rc3649.35a_620610408</version>
+    </dependency>
     <!-- JGit JSch dependency that was previously in git client plugin -->
     <!-- https://issues.jenkins.io/browse/JENKINS-70559 class not found exception -->
     <dependency>
       <groupId>org.eclipse.jgit</groupId>
       <artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
       <!-- TODO this is hard to manage; if needed, should be in BOM -->
-      <version>6.9.0.202403050737-r</version>
+      <version>6.10.0.202406032230-r</version>
     </dependency>
 
     <!-- test dependencies -->
